# aviutl-keyconfig

./: CHANGELOG.md  Cargo.toml  README.md
src/: command.rs  key.rs  main.rs
template/: default.hbs
