[package]
name = "aviutl-keyconfig"
version = "0.1.0"
edition = "2021"
authors = ["karoterra <karoterra2008@gmail.com>"]

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs = "0.8.30"
handlebars = "4.2.1"
serde = "1.0.136"
serde_json = "1.0.79"
clap = { version = "3.0.14", features = ["derive"] }
